--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                     </div>
                 <div class="bot-box">
                     <h1>Följ oss</h1>
-                    <p>Hanna kommer på en text om något här. Hon vet typ inte vad. Men hon ska tänka. Hon är ju ändå på semester liksom typ bah. YÅLÅ</p>
+                    <p>För att se när vi har nedsatta priser på våra däck,<br> eller när vi får in nya däck och säljer ut de gamla!</p>
                 </div>
                 </a>
                 </li>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="bot-box">
                     <h1>Följ oss</h1>
-                    <p>Hanna kommer på en text om något här. Hon vet typ inte vad. Men hon ska tänka. Hon är ju ändå på semester liksom typ bah. YÅLÅ</p>
+                    <p>För att se när vi har nedsatta priser på våra däck, <br> eller när vi får in nya däck och säljer ut de gamla!</p>
                 </div>
                 </a>
                 </li>
