--- a/summerTires.html
+++ b/summerTires.html
@@ -105,17 +105,17 @@
                             <clipPath id="clip0"> <rect width="106" height="96" fill="white" transform="translate(0.777344)"></rect> 
                             </clipPath> </defs> </g>
                         </svg>
-                        <p class="pricetag">100 kr/st</p>
-                        <button><a href="tire.html">Köp nu</a></button>
+                        <p class="pricetag">759 kr/st</p>
+                        <button><a href="tire.html">Till Försäljning</a></button>
                     </div>
                 </li>
 
                 <li class="product">
                     <figure>
-                        <img class="product-photo" src="/photos/sommartire.png" alt="Produkt 2">
+                        <img class="product-photo" src="/photos/SAILUN-ATREZZO-ELITE.png" alt="Produkt 2">
                     </figure>
                     <div class="product-info">
-                        <h2>Sailun Atrezzo Elite</h2>
+                        <h2>VITOUR GALAXY R1</h2>
                         <p>XL står för "Xtra load" och innebär att däcket är tillverkat med en rubustare konstruktion för att hantera tyngre belastning. 
                         XL däck är nödvändigt för dig som har en tungbil som tex SUV eller elbil. Men funkar också bra för vanliga bilar</p>
                     </div>
@@ -136,17 +136,17 @@
                             <clipPath id="clip0"> <rect width="106" height="96" fill="white" transform="translate(0.777344)"></rect> 
                             </clipPath> </defs> </g>
                         </svg>
-                        <p class="pricetag">100 kr/st</p>
-                        <button><a href="tire.html">Köp nu</a></button>
+                        <p class="pricetag">739 kr/st</p>
+                        <button><a href="tire.html">Till Försäljning</a></button>
                     </div>
                 </li>
             
                 <li class="product">
                     <figure>
-                        <img class="product-photo" src="/photos/sommartire.png" alt="Produkt 2">
+                        <img class="product-photo" src="/photos/ATTURO-AZ-800-XL.png" alt="Produkt 2">
                     </figure>
                     <div class="product-info">
-                        <h2>Sailun Atrezzo Elite</h2>
+                        <h2>Sailun Atrezzo ZSR</h2>
                         <p>XL står för "Xtra load" och innebär att däcket är tillverkat med en rubustare konstruktion för att hantera tyngre belastning. 
                         XL däck är nödvändigt för dig som har en tungbil som tex SUV eller elbil. Men funkar också bra för vanliga bilar</p>
                     </div>
@@ -167,8 +167,8 @@
                             <clipPath id="clip0"> <rect width="106" height="96" fill="white" transform="translate(0.777344)"></rect> 
                             </clipPath> </defs> </g>
                         </svg>
-                        <p class="pricetag">100 kr/st</p>
-                        <button><a href="tire.html">Köp nu</a></button>
+                        <p class="pricetag">821 kr/st</p>
+                        <button><a href="tire.html">Till Försäljning</a></button>
                     </div>
                 </li>
             </ul>
