--- a/Menu/footerMenu.html
+++ b/Menu/footerMenu.html
@@ -12,7 +12,7 @@
     <footer id="footer" class="footer">
         <div class="sections">
             <div class="footer-section">
-                <img class="img-footer" src="/photos/dackpatrullen_inPixio.png" alt="ourlogo">
+                <img id="footer-logo" class="img-footer" src="/photos/dackpatrullen_inPixio.png" alt="ourlogo">
             </div>
 
             <div class="footer-section">
@@ -30,7 +30,7 @@
 
             <div class="footer-section">
                 <h2>Hitta till oss</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8137.04104263346!2d18.0233301!3d59.3453033!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d9d263b022d%3A0x82fc0f30ed84f9ed!2sNackademin!5e0!3m2!1ssv!2sse!4v1701421208903!5m2!1ssv!2sse" 
+                <iframe id="google-maps-footer" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8137.04104263346!2d18.0233301!3d59.3453033!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d9d263b022d%3A0x82fc0f30ed84f9ed!2sNackademin!5e0!3m2!1ssv!2sse!4v1701421208903!5m2!1ssv!2sse" 
                     width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
