--- a/Menu/headerMenu.html
+++ b/Menu/headerMenu.html
@@ -85,7 +85,7 @@
         
         <!-- Här kan du lägga till mer innehåll för varukorgen -->
         <div id="shopping-cart-div" class="wrapper">
-            <h2>Varukorg</h2>
+            <h2>Varukorg<button id="exit-cart-button">X</button></h2>
             <ul id="cart-items"></ul>
             <p id="total-price">Totalt: 0 kr</p> <button>Betala</button>
           </div>
